@@ -1,12 +1,13 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.65 2005/02/01 04:21:14 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.66 2005/02/01 05:28:02 agaffney Exp $
 
 *GLI-gtkfe-0.01 (11 Dec 2004)
 
   31 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
   Changed vertical spacing for install steps. Removed "Install" activation
-  if profile is loaded. Bottom buttons are dynamically generated.
+  if profile is loaded. Bottom buttons are dynamically generated. Cleaned up
+  unneeded code from Partitioning.py
 
   30 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
   Deleting and recreating swap doesn't cause nastiness anymore. Switched
